# models

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .rtx.toml  .safety-policy.yml  CONTRIBUTING.md  README.md  bandit.yml  environment.yml  noxfile.py  poetry_lock.txt  pyproject.toml  temp.txt
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
models/: __main__.py  analysis_utils.py  crawl_utils.py  data_utils.py  index_utils.py  load_bgbmm.py  load_conf.py  load_dc_historical_context.py  load_dc_people.py  load_dc_places.py  load_dc_podcasts.py  load_dc_verse_level.py  load_encyclopedia.py  load_evidence_central.py  load_fair.py  load_fairs.py  load_historical_context.py  load_know.py  load_pearl_of_great_price.py  load_redeemer.py  load_utils.py  load_verse_level.py  rank_eval.py  rank_eval_utils.py  segment_eval.py  segment_train.py  split_markdown.py  split_model.py  split_model_eval.py  split_model_train.py  split_utils.py
notebooks/: 00_crawl_conf.ipynb  00_load_crawler.ipynb  01_analyze_conf.ipynb  01_load_loader.ipynb  01_pre_process.ipynb  02_analyze_conf.ipynb  02_load_analyzer.ipynb  05_bgbmm_crawler.ipynb  05_conference_crawler.ipynb  05_dc_people_crawler.ipynb  05_dc_places_crawler.ipynb  05_dc_podcasts_crawler.ipynb  05_dc_study_historical_context.ipynb  05_dc_study_verse_level.ipynb  05_encyclopedia_crawler.ipynb  05_evidence_central_crawler.ipynb  05_fair_crawler.ipynb  05_knowhy_crawler.ipynb  05_magazine_crawler.ipynb  05_pearl_crawler.ipynb  05_redeemer_crawler.ipynb  10_segment_gather_data.ipynb  10_segment_gather_data_to_label.ipynb  10_split_tolabel_data_gatherer.ipynb  11_segment_extract_labeled_data.ipynb  11_split_labeled_data_gatherer.ipynb  12_segment_train.ipynb  12_split_model_trainer.ipynb  13_segment_create.ipynb  13_split_splitter.ipynb  15_conference_loader.ipynb  15_dc_historical_context_loader.ipynb  15_dc_people_loader.ipynb  15_dc_places_loader.ipynb  15_dc_podcasts_loader.ipynb  15_dc_verse_level_loader.ipynb  15_encyclopedia_loader.ipynb  15_evidence_central_loader.ipynb  15_fair_loader.ipynb  15_historical_context_loader.ipynb  (+62 more)
references/: questions-45.txt  questions.txt  scored-results-45.csv  scored-results.csv
tests/: __init__.py  test_analysis_utils.py  test_data_utils.py  test_load_bgbmm.py  test_load_conf.py  test_load_dc_historical_context.py  test_load_dc_historical_context_extra.py  test_load_dc_people.py  test_load_dc_people_extra.py  test_load_dc_places.py  test_load_dc_places_extra.py  test_load_dc_podcasts.py  test_load_dc_podcasts_extra.py  test_load_dc_verse_level.py  test_load_dc_verse_level_extra.py  test_load_encyclopedia.py  test_load_encyclopedia_extra.py  (+21 more)
(+2 files in other folders)
