[tool.poetry]
name = "models"
version = "0.0.0"
description = "Models"
authors = ["Dallan Quass <dallan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DallanQ/models"
repository = "https://github.com/DallanQ/models"
documentation = "https://models.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/DallanQ/models/releases"

[tool.poetry.dependencies]
python = "^3.10.0"
click = ">=8.0.1"
jupyter = "^1.0.0"
openai = "^0.27.2"
pinecone-client = {extras = ["grpc"], version = "^2.2.1"}
datasets = "^2.10.1"
python-dotenv = "^1.0.0"
transformers = "^4.27.1"
nltk = "^3.8.1"
torch = "2.0.0"
cohere = "^4.1.1"
sentence-transformers = "^2.2.2"
spacy = "^3.7.2"
matplotlib = "^3.7.1"
types-tqdm = "^4.65.0.1"
markdownify = "^0.11.6"
boto3 = "^1.26.113"
ipykernel = "^6.22.0"
wandb = "^0.15.0"
langchain = "^0.0.306"
jupyterlab = "^4.0.6"
tiktoken = "^0.5.1"
types-requests = "^2.31.0.8"
pre-commit = "^3.4.0"
voyageai = "^0.1.3"
types-beautifulsoup4 = "^4.12.0.7"
pypdf = "^3.17.0"
cryptography = "^41.0.5"
lxml = "^4.9.3"
scipy = "^1.9.3"
unstructured = {extras = ["pdf"], version = "^0.11.0"}
docx2txt = "^0.8"
python-docx = "^1.1.0"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
models = "models.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
nbstripout = "^0.6.1"

[tool.coverage.paths]
source = ["models", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["models", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 65

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.black]
line-length = 120

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
